--- a/index.html
+++ b/index.html
@@ -1,12 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <meta title="Hi " content="">
     <title>Document</title>
+    <link rel="stylesheet" href="./style/main.css">
 </head>
+
 <body>
-    <h1> First project<h1>
+    <!-- Header start -->
+    <header>
+        <div class="logo_img " id="">
+            <img src="./assets/images/logo/logo.svg" alt="">
+        </div>
+        <nav>
+            <ul>
+                <li>
+                    Home
+                </li>
+                <li>
+                    Service
+                </li>
+                <li>
+                    Contact
+                </li>
+                <li class="header_btn">
+                    +8980003809343
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+
+
+
+    <!-- footer -->
+    <footer>
+        <div class="coloumn_one">
+            1
+        </div>
+        <div class="coloumn_two">
+            2
+        </div>
+        <div class="coloumn_three">
+            <ul>
+                <li>
+                    +971 58 67 47 123
+                </li>
+                <li>
+                    info@homecomfort.com
+                </li>
+            </ul>
+            <div class="news_letter">
+                <input type="text" placeholder="Enter Email">
+                <button>send</button>
+            </div>
+        </div>
+    </footer>
+
 </body>
+
 </html>
