footer and header

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta title="Hi " content="">
     <title>Document</title>
-    <link rel="stylesheet" href="./style/main.css">
+    <link rel="stylesheet" href="./style/main/main.css">
 </head>
 
 <body>
@@ -32,17 +32,55 @@
             </ul>
         </nav>
     </header>
+<main>
+<div class="block">
+    <h1>Quick Service On Emergency</h1>
+    <p><i class="fa-solid fa-phone"></i> +971 58 67 47 123
+    </p>
+</div>
 
+
+</main>
 
 
 
     <!-- footer -->
     <footer>
         <div class="coloumn_one">
-            1
+            <div class="logo">
+                <img src="./assets/images/logo/logo.svg" alt="">
+            </div>
+            <div class="description">
+                <p>We make sure that your safety is never compromised. This is why we hire all the staff under the roof of Home Comfort, just for your satisfaction.</p>
+            </div>
         </div>
         <div class="coloumn_two">
-            2
+            <ul>
+                <li>
+                    Home
+                </li>
+                <li>
+                    Services
+                </li>
+                <li>
+                    Contact Us
+                </li>
+             
+            </ul>
+            <ul>
+                <li>
+                    Facebook
+                </li>
+                <li>
+                    Twitter
+                </li>
+                <li>
+                    Linkedin
+                </li>
+                <li>
+                    Instagram
+                </li>
+            </ul>
         </div>
         <div class="coloumn_three">
             <ul>
@@ -58,7 +96,12 @@
                 <button>send</button>
             </div>
         </div>
+       
     </footer>
+    <hr>
+   <div class="copyright">
+    <p>@Copyrights reserved by HomeComfort</p>
+   </div>
 
 </body>
 
