all done asignment

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta title="Hi " content="">
     <title>Document</title>
-    <link rel="stylesheet" href="./style/main/main.css">
+    <link rel="stylesheet" href="./style/main.css">
 </head>
 
 <body>
@@ -32,15 +32,220 @@
             </ul>
         </nav>
     </header>
-<main>
-<div class="block">
-    <h1>Quick Service On Emergency</h1>
-    <p><i class="fa-solid fa-phone"></i> +971 58 67 47 123
-    </p>
-</div>
+    <main>
+        <section class="banner_section">
+            <di v class="page_width">
+                <div class="banner_inner_section">
+                    <div class="banner_content">
+                        <small>Best in Dubai</small>
+                        <p class="intro">Welcome To</p>
+                        <h2>Home <span>Comfort</span></h2>
+                        <p class="description">
+                            Home Comfort provides home repair services in Dubai with reasonable rates. We fix it right
+                            with
+                            home comfort professional experts.
+                        </p>
+                        <div class="banner_button">
+                            <button class="btn btn_1">Contact US</button>
+                            <button class="btn btn_2">Learn More</button>
+                        </div>
+                    </div>
+                    <div class="banner_img">
+                        <img src="./assets/images/home/banner/banner.svg" alt="">
+                    </div>
+                </div>
+                </div>
+        </section>
+        <!--after banner -->
+        <section class="after-banner-section">
+            <div class="after-banner-logos">
+                <div class="start-logo"><img src="./assets/images/home/after_banner/start.svg" alt="">
+                    <h4>24/7 Service</h4>
+                </div>
+                <div class="dollar-logo"><img src="./assets/images/home/after_banner/dollar.svg" alt="">
+                    <h4>Reasonable Rates</h4>
+                </div>
+                <div class="users-logo"><img src="./assets/images/home/after_banner/users.svg" alt="">
+                    <h4>Experienced Team</h4>
+                </div>
+            </div>
+        </section>
+
+        <!-- Service section-->
+        <section class="service-section">
+            <div class="explore-service">Explore our <span>Services</span></div>
+            <div class="services">
+                <div class="first service"><img src="./assets/images/home/ac-service.webp" alt="">
+                    <p class="ac-service">AC Service</p>
+                </div>
+                <div class="second service"><img src="./assets/images/home/dust-service.jpg" alt="">
+                    <p class="dust-service">Dust Cleaning</p>
+                </div>
+                <div class="third service"><img src="./assets/images/home/handyman-service.webp" alt="">
+                    <p class="handyman-service">Handyman</p>
+                </div>
+                <div class="fourth service"><img src="./assets/images/home/plumbing-service.webp" alt="">
+                    <p class="plumbing-service">Plumber</p>
+                </div>
+            </div>
+
+        </section>
+        <!--who we are-->
+        <section class="banner2-section">
+            <div class="page_width">
+                <div class="banner2-inner-section">
+                    <div class="banner2-img">
+                        <img src="./assets/images/home/who_img.jpg" alt="">
+                    </div>
+                    <div class="banner2_content">
+                        <h2>Who we <span>Are?</span></h2>
+                        <p class="description">
+                            Home Comfort is a leading multiple service provider company catering to your 360 needs with
+                            quality guaranteed. The aim
+                            and priority of Home Comfort are to add value to our consumers’ lives by providing smart
+                            solutions to all their
+                            problems. Our pride is providing the most extensive range of services. From home maintenance
+                            to personal assistance.
+                        </p>
+                        <p class="description">
+                            We make sure that your safety is never compromised. This is why we hire all the staff under
+                            the roof of Home Comfort,
+                            just for your satisfaction. Our goal is to become the largest and most famous online home
+                            services platform and provide
+                            our customers with the best of services and experience. Our experts will give you the most
+                            satisfying experience and
+                            professionalism. On your demand, all of our best home maintenance and renovation services
+                            are available at the very
+                            right time and place.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+        <!--who we are-->
+        <section class="banner3-section">
+            <div class="page_width">
+                <div class="banner3-inner-section">
+
+                    <div class="banner3_content">
+                        <h2>Company <span>Authority</span></h2>
+                        <p class="description">
+                            Basically, finding the right person to do up the works is very much important and for that,
+                            there are certain things you
+                            should keep in mind while appointing a service man. Analyze the best service provider who
+                            can perform the works well and
+                            give you desired results. You can search for professional home service companies online and
+                            get the best company that
+                            meets up your demands.
+                        </p>
+                        <p class="description">
+                            Home Comfort is a leading multiple service provider company catering to your 360 needs with
+                            quality guaranteed. The aim
+                            and priority of Home Comfort are to add value to our consumers's lives by providing smart
+                            solutions to all their
+                            problems. Our pride is providing the most extensive range of services. From home maintenance
+                            to personal assistance.
+                        </p>
+
+                    </div>
+                    <div class="banner3-img">
+                        <img src="./assets/images/home/company.svg" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!--banner3-->
+        <section class="banner4-section">
+            <div class="page-width">
+                <div class="banner4-inner-section">
+                    <div class="detail">
+                        <h3>Our <span>Clients</span></h3>
+                        <p>We make sure that your safety is never compromised. This is why we hire all the staff under
+                            the roof of Home Comfort,just for your satisfaction. Our goal is to become the
+                            largest and most famous online home services platform and provide our customers with the
+                            best of services and experience.</p>
+                    </div>
+                    <div class="client-section">
+                        <div class="first-client client">
+                            <img src="./assets/images/home/client.svg" alt="" class="clientpic">
+                            <h4>Alena Herwitz</h4>
+                            <p>3 months ago</p>
+                            <img src="./assets/images/home/5star.svg" alt="" class="star2">
+                            <pre class="desc">We make sure that your safety is never 
+compromised. This is why we hire all the
+staff under the roof of Home Comfort, just 
+for your satisfaction.</pre>
+                        </div>
+                        <div class="second-client client">
+                            <img src="./assets/images/home/client.svg" alt="" class="clientpic">
+                            <h4>Alena Herwitz</h4>
+                            <p>3 months ago</p>
+                            <img src="./assets/images/home/5star.svg" alt="" class="star2">
+                            <pre class="desc">We make sure that your safety is never 
+                            compromised. This is why we hire all the
+                            staff under the roof of Home Comfort, just 
+                            for your satisfaction.</pre>
+                        </div>
+                        <div class="third-client client">
+                            <img src="./assets/images/home/client.svg" alt="" class="clientpic">
+                            <h4>Alena Herwitz</h4>
+                            <p>3 months ago</p>
+                            <img src="./assets/images/home/5star.svg" alt="" class="star2">
+                            <pre class="desc">We make sure that your safety is never 
+                            compromised. This is why we hire all the
+                            staff under the roof of Home Comfort, just 
+                            for your satisfaction.</pre>
+                        </div>
+
+                        <div class="fourth-client client">
+                            <img src="./assets/images/home/client.svg" alt="" class="clientpic">
+                            <h4>Alena Herwitz</h4>
+                            <p>3 months ago</p>
+                            <img src="./assets/images/home/5star.svg" alt="" class="star2">
+                            <pre class="desc">We make sure that your safety is never 
+                            compromised. This is why we hire all the
+                            staff under the roof of Home Comfort, just 
+                            for your satisfaction.</pre>
+                        </div>
+                        <div class="fifth-client client">
+                            <img src="./assets/images/home/client.svg" alt="" class="clientpic">
+                            <h4>Alena Herwitz</h4>
+                            <p>3 months ago</p>
+                            <img src="./assets/images/home/5star.svg" alt="" class="star2">
+                            <pre class="desc">We make sure that your safety is never 
+                                                    compromised. This is why we hire all the
+                                                    staff under the roof of Home Comfort, just 
+                                                    for your satisfaction.</pre>
+                        </div>
+                        <div class="sixth-client client">
+                            <img src="./assets/images/home/client.svg" alt="" class="clientpic">
+                            <h4>Alena Herwitz</h4>
+                            <p>3 months ago</p>
+                            <img src="./assets/images/home/5star.svg" alt="" class="star2">
+                            <pre class="desc">We make sure that your safety is never 
+                                                    compromised. This is why we hire all the
+                                                    staff under the roof of Home Comfort, just 
+                                                    for your satisfaction.</pre>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+        <!--contact section-->
+        <div class="block">
+            <h1>Quick Service On Emergency</h1>
+            <p><img src="./assets/images/phone.png" alt="">+971 58 67 47 123
+            </p>
+        </div>
 
 
-</main>
+
+    </main>
 
 
 
@@ -51,7 +256,8 @@
                 <img src="./assets/images/logo/logo.svg" alt="">
             </div>
             <div class="description">
-                <p>We make sure that your safety is never compromised. This is why we hire all the staff under the roof of Home Comfort, just for your satisfaction.</p>
+                <p>We make sure that your safety is never compromised. This is why we hire all the staff under the roof
+                    of Home Comfort, just for your satisfaction.</p>
             </div>
         </div>
         <div class="coloumn_two">
@@ -65,7 +271,7 @@
                 <li>
                     Contact Us
                 </li>
-             
+
             </ul>
             <ul>
                 <li>
@@ -96,12 +302,12 @@
                 <button>send</button>
             </div>
         </div>
-       
+
     </footer>
     <hr>
-   <div class="copyright">
-    <p>@Copyrights reserved by HomeComfort</p>
-   </div>
+    <div class="copyright">
+        <p>@Copyrights reserved by HomeComfort</p>
+    </div>
 
 </body>
 
